[Android,VideoFling] Never add null players to alternative ones

BUG=602851
TEST=existing tests

The fix is a mere speculation from staring at the code.

Review URL: https://codereview.chromium.org/1889233002

Cr-Commit-Position: refs/heads/master@{#387961}

Former-commit-id: 9af71a3cfca697a63586d334267829408d702d6a